--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ requests = "^2.31.0"
 psycopg2-binary = "^2.9.9"
 django = "^4.2.7"
 dj-database-url = "^2.1.0"
+whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
