--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,20 +9,17 @@ packages = [{include = "task_manager"}]
 [tool.poetry.dependencies]
 python = "^3.8.1"
 python-dotenv = "0.21.0"
-poetry = "^1.6.1"
 pytest-cov = "^4.1.0"
 beautifulsoup4 = "4.12.2"
-Werkzeug = "2.2.2"
 postgres = "^4.0"
 flake8 = "^6.1.0"
-requests = "^2.31.0"
 psycopg2-binary = "^2.9.9"
 django = "^4.2.7"
 dj-database-url = "^2.1.0"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 gunicorn = "^21.2.0"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev.dependencies]
 pytest = "^7.4.2"
 
 [build-system]
