--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dj-database-url = "^2.1.0"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 gunicorn = "^21.2.0"
 
-[tool.poetry.dev.dependencies]
+[tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
 
 [build-system]
