--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django = "^4.2.7"
 dj-database-url = "^2.1.0"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 gunicorn = "^21.2.0"
+django-bootstrap5 = "^23.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
