--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dj-database-url = "^2.1.0"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 gunicorn = "^21.2.0"
 django-bootstrap5 = "^23.3"
+django-filter = "^23.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
