--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 SECRET_KEY = 'django-insecure-0qdmzgt7g6iwxe!2jm50uxp!+gdg7s7a6ef5okn@o)v!4&8-wj'
+ACCESS_TOKEN = '0ff4dde31d1f43b2b135fda20da51297'
 DEBUG = True
 SQLITE_URL=sqlite:///my-local-sqlite.db
 CACHE_URL=memcache://127.0.0.1:11211,127.0.0.1:11212,127.0.0.1:11213
