--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 gunicorn = "^21.2.0"
 django-bootstrap5 = "^23.3"
 django-filter = "^23.5"
+rollbar = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
