--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ gunicorn = "^21.2.0"
 django-bootstrap5 = "^23.3"
 django-filter = "^23.5"
 rollbar = "^1.0.0"
+distutils-strtobool = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.2"
