--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-SECRET_KEY = 'django-insecure-0qdmzgt7g6iwxe!2jm50uxp!+gdg7s7a6ef5okn@o)v!4&8-wj'
+SECRET_KEY='django-insecure-0qdmzgt7g6iwxe!2jm50uxp!+gdg7s7a6ef5okn@o)v!4&8-wj'
 DEBUG=True
 SQLITE_URL=sqlite:///my-local-sqlite.db
-CACHE_URL=memcache://127.0.0.1:11211,127.0.0.1:11212,127.0.0.1:11213
-REDIS_URL=rediscache://127.0.0.1:6379/1?client_class=django_redis.client.DefaultClient&password=ungithubbed-secret
+ACCESS_TOKEN='0f67bc841678441c853e82cc87091705'
