--- a/.github/workflows/project-check.yml
+++ b/.github/workflows/project-check.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         # we want to test our package on several versions of Python
